--- a/Portfolio_2.html
+++ b/Portfolio_2.html
@@ -17,7 +17,7 @@
   <header>
     <div class="container nav">
       <a href="#home" class="brand" aria-label="Go to home">
-        <span class="brand-logo">NI</span>
+        <span class="brand-logo"></span>
         <span>Md. Nazrul Islam</span>
       </a>
       <nav aria-label="Primary">
@@ -68,8 +68,8 @@
       <div class="panel">
         <h3 style="margin-top:0">Highlights</h3>
         <ul>
-          <li>Semantic, SEO‑friendly markup</li>
-          <li>Performance‑first CSS (&lt;100KB total CSS/JS for this page)</li>
+          <li>Semantic, SEO friendly markup</li>
+          <li>Performance first CSS (&lt;100KB total CSS/JS for this page)</li>
           <li>Clean component structure and comments</li>
         </ul>
       </div>
@@ -120,7 +120,7 @@
               <h3 style="margin:0;font-size:1.1rem">Personal Portfolio</h3>
               <span class="tag">HTML, CSS, Responsive</span>
             </div>
-            <p class="muted">Single‑page personal site with sticky nav, accessibility best practices, and fast load.</p>
+            <p class="muted">Single page personal site with accessibility best practices, and fast load.</p>
           </div>
           <div class="card-footer">
             <a class="link" href="https://nazrulugv47.github.io/HTML-CSS/" aria-label="Live demo">Live Demo</a>
@@ -227,14 +227,5 @@
       form.reset();
     });
   </script>
-
-  <!--
-  ======= Quick Edit Instructions =======
-  1) Replace text content (name, bio, services) in the About & Hero sections.
-  2) Swap project images/links in the Projects cards (use your own screenshots).
-  3) Update social links in the footer.
-  4) To deploy: drag-drop this file into Netlify, Vercel, or enable GitHub Pages.
-  5) Optional SEO: Update <title>, description, and add your own Open Graph tags.
-  -->
 </body>
 </html>
